--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6">
     <%= form_with(model: @user, url: password_reset_path(params[:id])) do|f| %>
       <% p password_resets_path(params[:id]); p password_reset_path(params[:id]) %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%= hidden_field_tag :email, @user.email %>
 
